src/style/taskTemplate.scss
@import './modern-normalize.css';
@import '../js/codemirror/lib/codemirror.css';
@import '../js/codemirror/theme/cobalt.css';
@import '../js/codemirror/addon/scroll/simplescrollbars.css';
@import './common-mixins';
@import './menu.scss';

$shadow: rgb(138, 212, 200);
$panel-color: rgb(0, 24, 32);
$text-color: rgb(200, 199, 209);
$height-to-redistribute: calc((100vh - 310px) / 5);
$min-height: 90px;


@mixin setColumns($left, $right) {
    body {
        grid-template-columns: $left $right;
    }

    .pop-up {
        left: $left + $right / 2;
    }
}

* {
    line-height: 1.5em;
}

body {
    min-height: 100vh;
    overflow-x: hidden;
    background-color: black;
}

.class-name {
    color: rgb(196, 97, 97);
}

.attribute-name {
    color: rgb(255, 178, 78);
}

.tag-name {
    color: rgb(129, 255, 129);
}

.hint {
    height: .95em;
    &:hover {
        cursor: pointer;
    }
}

button {
    @include resetBtn();
}

// inside lists
ol ul {
    padding-left: 15px;
}

iframe {
    width: 100%;
    height: 50vh;
    border: none;
}

.task-panel {
    display: flow-root;
    position: relative;
    background-color: rgb(0, 24, 32);
    color: $text-color;
    min-height: 50vh;
    padding: 15px 10px;
    letter-spacing: 1px;
    margin-top: -6px;
    &::after {
        content: "";
        display: table;
        clear: both;
    }
}

h1 {
    line-height: 1.15em;
    margin: 0;
    text-align: center;
    color: $panel-color;
    text-transform: uppercase;
    text-shadow: 1px 1px 10px $shadow,
                -1px 1px 10px $shadow,
                1px -1px 10px $shadow,
                -1px -1px 10px $shadow;
    letter-spacing: 2px;
    float: right;
    font-size: 18px;
    &:hover {
        transform: scale(1.04);
        cursor: pointer;
    }
}

.task-title {
    color: $panel-color;
    line-height: 1.2em;
    text-shadow: 1px 1px 1px $shadow,
                -1px 1px 1px $shadow,
                1px -1px 1px $shadow,
                -1px -1px 1px $shadow;
    padding-top: 30px;
}

.list-of-tasks {
    list-style-position: inside;
    padding-left: 10px;
    margin-bottom: 17px;
    li:not(:last-child) {
        margin-bottom: 8px;
    }
}

.run-code-btn,
.next-task-btn {
    $border-color: rgb(12, 42, 99);
    width: 80px;
    height: 40px;
    margin-top: 7px;
    background-color: transparent;
    border: 1px solid $border-color;
    color: white;
    border-radius: 5px;
    transition: all .5s;
    float: right;
    &:hover:not([disabled]) {
        box-shadow: 0 0 10px 1px $border-color;
    }
    &[disabled] {
        border: 1px solid rgba(12, 42, 99, 0.753);
    }
}

.next-task-btn {
    margin-left: 6px;
    margin-top: 16px;
    a {
        text-decoration: none;
        color: $text-color;
    }
}

button[disabled] {
    color: rgba(200, 199, 209, 0.459);
}

.CodeMirror {
    animation-duration: .5s;
    min-height: $min-height;
}
// animation for wrong made task
@keyframes boomer {
    0%, 100% {left: 0;}
    5%, 15%, 25%, 35%, 45%, 55%, 65%, 75%, 85% {left: -2px;}
    10%, 20%, 30%, 40%, 50%, 60%, 70%, 80%, 90% {left: 2px;}
}


.pop-up {
    position: fixed;
    z-index: 100;
    top: 10vh;
    left: 50%;
    transform: translateX(-50%);
    width: 90%;
    max-width: 416px;
    min-height: 200px;
    padding: 10px;
    border-radius: 7px;
    text-shadow: 0 1px 2px black;
    display: none;
    overflow-wrap: break-word;
    background-color: #002240;
    box-shadow: 0 0 5px 1px rgb(184, 207, 238);
}
button.close {
    float: right;
    color: #5a908d;
    svg {
        width: 18px;
        height: 18px;
        stroke: $text-color;
        stroke-width: 4;
        stroke-linecap: square;
        stroke-linejoin: miter;
        fill: none;
        color: $text-color;
    }
}
.links-list {
    padding-left: 14px;
    line-height: 2em;
    a {
        text-decoration: none;
        color: $text-color;    
        &:hover {
            color: rgb(0, 102, 255);
        }
        &:active {
            color: rgb(68, 209, 197);
        }

    }
}
.hints-for-user p {
        margin-top: 10px;
}

.error-alert {
    $height: 150px;

    min-height: $height;
    
    .content {
        width: 100%;
        min-height: $height - 18px;
        display: flex;
        align-items: center;
        justify-content: center;
    }
}

.CodeMirror {
    height: calc(#{$height-to-redistribute} * 3);
}


// TUTORIAL
.hide {
    opacity: 0.3;
}

.tutorial-tip {
    position: absolute;
    top: 87px;
    right: 145px;
    width: 155px;
    padding: 0 10px;
    z-index: 2;
    display: none;

    border-radius: 7px;
    text-shadow: 0 1px 2px black;    
    overflow-wrap: break-word;
    background-color: #002240;
    box-shadow: 0 0 5px 1px rgb(184, 207, 238);
}

.tutorial-arrow {
    position: absolute;
    top: 60px;
    right: 172px - 71px;
    z-index: 3;
    width: 71px;
    height: 61px;
    display: none;
}
// TUTORIAL END


@media (min-width: 205px) {
    .run-code-btn,
    .next-task-btn {
        margin-top: 10px;
    }
    ol ul {
        padding-left: 30px;
    }
}
@media (min-width: 316px) {
    .task-panel {
        padding: 15px 20px;
    }
    .links-list {
        padding-left: 25px;
    }
    ol ul {
        padding-left: 40px;
    }
}
@media (min-width: 501px) {
    .task-panel {
        padding: 15px 25px;
    }
    .task-title {
        padding-top: 0px;
    }
    .list-of-tasks {
        padding-left: 25px;
    }
    .links-list {
        padding-left: 30px;
    }
}

@media (min-width: 612px) {
    .pop-up {
        width: 65%;
        padding-left: 20px;
    }
}
@media (min-width: 807px) {
    .pop-up {
        width: 55%;
    }
}

// landscape orientation of the page
@media (min-width: 1007px) {
    @include setColumns(34%, 66%);

    body {
        display: grid;
        justify-items: stretch;
    }
    iframe {
        height: 100%;
    }
    .task-panel {
        min-height: 100vh;
        margin-top: 0;
        padding: 15px 3vw;
    }
    .list-of-tasks {
        height: calc(#{$height-to-redistribute} * 2);
        overflow-y: auto;
        min-height: $min-height;

        // scrollbar
        &::-webkit-scrollbar {
            width: 8px;
        }

        &::-webkit-scrollbar-track {
            border-radius: 4px;
            background-color: rgb(143, 169, 182);
        }

        &::-webkit-scrollbar-thumb {
            border-radius: 4px;
            background: rgb(44, 62, 78);
        }

        &::-webkit-scrollbar-thumb:hover {
            background: rgb(16, 50, 63);
        }
    }
}

@media (min-width: 1050px) {
    .pop-up {
        width: 45%;
    }
}
@media (min-width: 1115px) {
    $height-to-redistribute: calc((100vh - 285px) / 5);

    .list-of-tasks {
        height: calc(#{$height-to-redistribute} * 2);
    }
    .CodeMirror {
        height: calc(#{$height-to-redistribute} * 3);
    }
}  

@media (min-width: 1250px) {
    @include setColumns(40%, 60%);
}

@media (max-width: 322px) {
    .tutorial-tip {
        top: 116px;
        right: 10px;
        max-width: 90%;
    }
    .tutorial-arrow {
        top: 68px;
        right: 15px;
        transform: rotate(-45deg);
    }
}

